<resources>
    <string name="app_name">SafeAlert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sos">SOS</string>
    <string name="stop_sos">STOP SOS</string>
    <string name="write_the_message">Write the message...</string>
    <string name="time_in_minutes">Time in minutes</string>
    <string name="send">SEND</string>
    <string name="back">BACK</string>
    <string name="check_weather_alert">Check Weather Alert</string>
    <string name="API_KEY"> 1069413751699 </string>
    <string name="API_KEY_ID">steel-sequencer-454901-c7</string>
    <string name="safealert">SafeAlert 🆘</string>
</resources>